syntax = "proto3";
package openmatch;

option csharp_namespace = "OpenMatch";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Ticket {
	string id = 1;
	Assignment assignment = 3;
	SearchFields search_fields = 4;
	map<string, google.protobuf.Any> extensions = 5;
	google.protobuf.Timestamp create_time = 6;

	reserved 2;
}

message SearchFields {
	map<string, double> double_args = 1;
	map<string, string> string_args = 2;
	repeated string tags = 3;
}

message Assignment {
	string connection = 1;
	map<string, google.protobuf.Any> extensions = 4;

	reserved 2, 3;
}

message DoubleRangeFilter {
	string double_arg = 1;
	double max = 2;
	double min = 3;
}

message StringEqualsFilter {
	string string_arg = 1;
	string value = 2;
}

message TagPresentFilter {
	string tag = 1;
}

message Pool {
	string name = 1;
	repeated DoubleRangeFilter double_range_filters = 2;
	repeated StringEqualsFilter string_equals_filters = 4;
	repeated TagPresentFilter tag_present_filters = 5;
	google.protobuf.Timestamp created_before = 6;
	google.protobuf.Timestamp created_after = 7;
	reserved 3;
}

message MatchProfile {
	string name = 1;
	repeated Pool pools = 3;
	map<string, google.protobuf.Any> extensions = 5;
	reserved 2, 4;
}

message Match {
	string match_id = 1;
	string match_profile = 2;
	string match_function = 3;
	repeated Ticket tickets = 4;
	map<string, google.protobuf.Any> extensions = 7;
	reserved 5, 6;
}